Fixed scrollbar
:)

--- a/public/rooms/canvases/canvas.css
+++ b/public/rooms/canvases/canvas.css
@@ -48,7 +48,6 @@ html, body {
 #wrapper{
     position: relative;
     overflow:hidden;
-    max-height: 484px;
 }
 
 
